Using flex box again to prevent wrapping

--- a/src/renderer/styles/panels/DirectoryList.scss
+++ b/src/renderer/styles/panels/DirectoryList.scss
@@ -1,8 +1,11 @@
 .DirectoryList {
 
     .Item {
-        // display: flex;
-        display: inline-block;
-        // align-items: center;
+        display: flex;
+        align-items: center;
+
+        button {
+            flex: 0 0 auto;
+        }
     }
 }
